--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>SIAR WEBSITE</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/f4a6667233.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="boxes">
-    <h1>Marco (Checchi) Chellogs</h1>
+    <h1>Ahmad Siar (Sohrab)</h1>
     <h2>Programming with style</h2>
     <div>
-    <img class="profile-image-round" src="images/profile-pic.jpg" alt="profile picture">
+    <img class="profile-image-round" src="images/siar profile.jpeg" alt="profile picture">
     <p><em>Click me to check my markup skills!</em></p>
     </div>
   </div>
