--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <div class="boxes">
     <h2>Follow me on:</h2>
     <ul>
-      <li><a href="https://www.instagram.com/marcochellogs/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="https://www.instagram.com/siar_sohrab/" target="_blank"><i class="fab fa-instagram"></i></a></li>
       <li><a href="https://www.facebook.com/marco.c.checchi" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
       <li><a href="https://github.com/marcochellogs" target="_blank"><i class="fab fa-github-square"></i></a></li>
     </ul>
