i added some photo and title

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>SIAR SOHRAB</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/f4a6667233.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="boxes">
-    <h1>Marco (Checchi) Chellogs</h1>
+    <h1> SIAR SOHRAB</h1>
     <h2>Programming with style</h2>
     <div>
-    <img class="profile-image-round" src="images/profile-pic.jpg" alt="profile picture">
+    <img class="profile-image-round" src="images/RUSSIA PIC.jpg" alt="profile picture">
     <p><em>Click me to check my markup skills!</em></p>
     </div>
   </div>
@@ -22,9 +22,9 @@
     <p> I'm love <strong>startups</strong> and innovative business models, so I turned to programming out of curiosity and need.</p>
     <p> I worked in Digital Marketing in a Danish company and met awesome web developers in CPH.</p>
     <p> 2 years ago I started a digitalization project for a goldsmith friend of mine and now we sell online.</p>
-    <div class="picture-card"><img class="fun-pic" src="images/marco-work.jpg" alt="glasses"></div>
-    <div class="picture-card"><a href="https://begoreficeria.com/blogs/notizie/come-creare-un-ecommerce-di-gioielli-online-begoreficeria"><img class="fun-pic" src="images/begoreficeria.jpeg" alt="work"></a> </div>
-    <div class="picture-card"><img class="fun-pic" src="images/glasses.jpg" alt="glasses"></div>
+    <div class="picture-card"><img class="fun-pic" src="images/AFGHAN STAR FINAL.jpg" alt="glasses"></div>
+    <div class="picture-card"><img class="fun-pic" src="images/WITH ZALALLAH PIC.jpg" alt="work"></a> </div>
+    <div class="picture-card"><img class="fun-pic" src="images/IN STUDIO WITH ARMI.jpg" alt="glasses"></div>
 
     <br><a href="https://www.linkedin.com/in/marco-checchi-387828145/" target="_blank"><button id="btn-work">Check out my work</button></a>
    </div>
