--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="boxes">
     <h1> SIAR SOHRAB</h1>
-    <h2>Programming with style</h2>
+    <h2>Programming with style is my style</h2>
     <div>
     <img class="profile-image-round" src="images/RUSSIA PIC.jpg" alt="profile picture">
     <p><em>Click me to check my markup skills!</em></p>
@@ -26,24 +26,27 @@
     <div class="picture-card"><img class="fun-pic" src="images/WITH ZALALLAH PIC.jpg" alt="work"></a> </div>
     <div class="picture-card"><img class="fun-pic" src="images/IN STUDIO WITH ARMI.jpg" alt="glasses"></div>
 
-    <br><a href="https://www.linkedin.com/in/marco-checchi-387828145/" target="_blank"><button id="btn-work">Check out my work</button></a>
+    <br><a href="https://youtu.be/RgLhPQAo1IM" target="_blank"><button id="btn-work">Check me out</button></a>
    </div>
    <div class="boxes" id="fun">
     <h2>My life outside of work</h2>
     <p>As you might have seen from my profile pic, I rarely stay put.</p>
     <p>I'm a lively and sociable person who <strong>loves</strong> to party and to play sports.</p><br>
-    <div class="picture-card"><img class="fun-pic" src="images/team.jpg" alt="sports"></div>
-    <div class="picture-card"> <img class="fun-pic" src="images/frendz-hostel.jpg" alt="hostel party"></div>
-    <div class="picture-card"><img class="fun-pic" src="images/party.jpg" alt="partyy"></div>
+    <div class="picture-card"><img class="fun-pic" src="images/pic 01.jpeg" alt="sports"></div>
+    <div class="picture-card"> <img class="fun-pic" src="images/pic 02.jpeg" alt="hostel party"></div>
+    <div class="picture-card"><img class="fun-pic" src="images/pic 03.jpeg" alt="partyy"></div>
+    <div class="picture-card"><img class="fun-pic" src="images/pic 04.jpeg" alt="partyy"></div>
+    <div class="picture-card"><img class="fun-pic" src="images/pic 05.jpeg" alt="partyy"></div>
+    <div class="picture-card"><img class="fun-pic" src="images/pic 06.JPG" alt="partyy"></div>
     <!-- pic of frisbee, ping pong other -->
-    <br><a href="https://www.youtube.com/watch?v=KpllAjxOIUU" target="_blank"><button id="btn-fun">Challenge me at some sports</button></a>
+    <br><a href="https://www.instagram.com/siar_sohrab/" target="_blank"><button id="btn-fun">follow me on instagram for more photos</button></a>
    </div>
 
    <div class="boxes" id="hacker">
-    <h2>Is this just a plain box?</h2>
+    <h2>See your horoscope</h2>
     <p> Try to hover here...</p>
-    <p id="secret"> You found my secret message, welcome to the dark side.</p>
-    <p id="secret"> Become a hacker by clicking this link --> <a id="secret" href="https://www.wikihow.com/Hack">deepweb://3nCr1Pt3dL1nK.secret</a></p>
+    <p id="secret">Find your secret message.</p>
+    <p id="secret"> <a id="secret" href="">Follow your heart, listen to your inner voice, stop caring about what others think.</a></p>
 
     <br><button id="pointless-btn">Vanishing pointless button</button>
    </div>
@@ -51,9 +54,9 @@
    <div class="boxes">
     <h2>Follow me on:</h2>
     <ul>
-      <li><a href="https://www.instagram.com/marcochellogs/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-      <li><a href="https://www.facebook.com/marco.c.checchi" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-      <li><a href="https://github.com/marcochellogs" target="_blank"><i class="fab fa-github-square"></i></a></li>
+      <li><a href="https://www.instagram.com/siar_sohrab/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="https://www.facebook.com/ahmadsiars" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+      <li><a href="https://github.com/Siar-Sohrab" target="_blank"><i class="fab fa-github-square"></i></a></li>
     </ul>
   </div>
 </body>
