deleted one part

--- a/index.html
+++ b/index.html
@@ -42,14 +42,25 @@
     <br><a href="https://www.instagram.com/siar_sohrab/" target="_blank"><button id="btn-fun">follow me on instagram for more photos</button></a>
    </div>
 
-   <div class="boxes" id="hacker">
-    <h2>See your horoscope</h2>
-    <p> Try to hover here...</p>
-    <p id="secret">Find your secret message.</p>
-    <p id="secret"> <a id="secret" href="">Follow your heart, listen to your inner voice, stop caring about what others think.</a></p>
+   <div class="container">
+    <ul>
+        <li>
+            <figure>
+            <img src="images/user2.png" alt="User stestimonial picture">
+            <blockquote> lorem ipsum dolor sit amet, conseterur sadipscing elitr, sed diam nonumy eirmod invidunt ut labore et dolore.</blockquote>
+            <figcaption>- Jane Doe</figcaption>
+        </figure>
+        </li>
+        <li>
+            <figure>
+            <img src="images/user1.png" alt="User stestimonial picture">
+            <blockquote> lorem ipsum dolor sit amet, conseterur sadipscing elitr, sed diam nonumy eirmod invidunt ut labore et dolore.</blockquote>
+            <figcaption>- John Doe</figcaption>
+        </figure>
+        </li>
+    </ul>
+</div>
 
-    <br><button id="pointless-btn">Vanishing pointless button</button>
-   </div>
 
    <div class="boxes">
     <h2>Follow me on:</h2>
