--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
     <h1> SIAR SOHRAB</h1>
     <h2>Programming with style is my style</h2>
     <div>
-    <img class="profile-image-round" src="images/RUSSIA PIC.jpg" alt="profile picture">
+    <img class="profile-image-round" src="images/RUSSIA PIC 002.jpg" alt="profile picture">
     <p><em>Click me to check my markup skills!</em></p>
     </div>
   </div>
   <div class="boxes" id="work">
     <h2>Work and projects</h2>
-    <p> I'm love <strong>startups</strong> and innovative business models, so I turned to programming out of curiosity and need.</p>
-    <p> I worked in Digital Marketing in a Danish company and met awesome web developers in CPH.</p>
-    <p> 2 years ago I started a digitalization project for a goldsmith friend of mine and now we sell online.</p>
+    <p> I like working with TV and celebrities. And I worked for a television station in Afghanistan for almost ten years. As a Senior Content Producer.<br> I have been living in Italy since 2019. I am starting to learn coding and website development and now I really like coding.</p>
     <div class="picture-card"><img class="fun-pic" src="images/AFGHAN STAR FINAL.jpg" alt="glasses"></div>
     <div class="picture-card"><img class="fun-pic" src="images/WITH ZALALLAH PIC.jpg" alt="work"></a> </div>
     <div class="picture-card"><img class="fun-pic" src="images/IN STUDIO WITH ARMI.jpg" alt="glasses"></div>
@@ -29,9 +27,9 @@
     <br><a href="https://youtu.be/RgLhPQAo1IM" target="_blank"><button id="btn-work">Check me out</button></a>
    </div>
    <div class="boxes" id="fun">
-    <h2>My life outside of work</h2>
-    <p>As you might have seen from my profile pic, I rarely stay put.</p>
-    <p>I'm a lively and sociable person who <strong>loves</strong> to party and to play sports.</p><br>
+    <h2>My Photography</h2>
+    <p><strong>Photography</strong> for me is not looking, it’s feeling. If you can’t feel what you’re looking at,</p>
+    <p>then you’re never going to get others to <strong>feel</strong> anything when they look at your pictures.</p><br>
     <div class="picture-card"><img class="fun-pic" src="images/pic 01.jpeg" alt="sports"></div>
     <div class="picture-card"> <img class="fun-pic" src="images/pic 02.jpeg" alt="hostel party"></div>
     <div class="picture-card"><img class="fun-pic" src="images/pic 03.jpeg" alt="partyy"></div>
@@ -46,16 +44,17 @@
     <ul>
         <li>
             <figure>
+              <h2>Comment of colleagues</h2>
             <img src="images/user2.png" alt="User stestimonial picture">
-            <blockquote> lorem ipsum dolor sit amet, conseterur sadipscing elitr, sed diam nonumy eirmod invidunt ut labore et dolore.</blockquote>
-            <figcaption>- Jane Doe</figcaption>
+            <blockquote> You are, without a doubt, the biggest professional asset to this company. We are lucky to have such an experienced person amongst us. We really appreciate the knowledge and tips that you choose to impart us with. Thank you!</blockquote>
+            <figcaption>Production manager - Jane Doe</figcaption>
         </figure>
         </li>
         <li>
             <figure>
             <img src="images/user1.png" alt="User stestimonial picture">
-            <blockquote> lorem ipsum dolor sit amet, conseterur sadipscing elitr, sed diam nonumy eirmod invidunt ut labore et dolore.</blockquote>
-            <figcaption>- John Doe</figcaption>
+            <blockquote> I always count the lucky stars that I get to work with you. Your hard-working, patient, street smart and an overall wonderful colleague to have. May you have a lot of success in your professional life.</blockquote>
+            <figcaption>Colleague - Mariah Carey</figcaption>
         </figure>
         </li>
     </ul>
