--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
   <div class="boxes">
     <h1> SIAR SOHRAB</h1>
-    <h2>Programming with style is my style</h2>
+    <h2>Programming Is My Style</h2>
     <div>
     <img class="profile-image-round" src="images/RUSSIA PIC 002.jpg" alt="profile picture">
-    <p><em>Click me to check my markup skills!</em></p>
+    <div>
+      <button class="btn-1" id="button01"><em>Click me to check my markup skills!</em></button>
+    </div>
+    
     </div>
   </div>
   <div class="boxes" id="work">
@@ -62,7 +65,7 @@
 
 
    <div class="boxes">
-    <h2>Follow me on:</h2>
+    <h2>Follow me on</h2>
     <ul>
       <li><a href="https://www.instagram.com/siar_sohrab/" target="_blank"><i class="fab fa-instagram"></i></a></li>
       <li><a href="https://www.facebook.com/ahmadsiars" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
