--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SIAR SOHRAB</title>
+  <title>SIAR SOHRAB profile</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/f4a6667233.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
