added two linke

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
     <img class="profile-image-round" src="images/RUSSIA PIC 002.jpg" alt="profile picture">
     <div>
-      <button class="btn-1" id="button01"><em>Click me to check my markup skills!</em></button>
+      <button src="https://europa.eu/!xT84nC" class="btn-1" id="button01"><em>Check my markup skills!</em></button>
     </div>
     
     </div>
@@ -27,7 +27,7 @@
     <div class="picture-card"><img class="fun-pic" src="images/WITH ZALALLAH PIC.jpg" alt="work"></a> </div>
     <div class="picture-card"><img class="fun-pic" src="images/IN STUDIO WITH ARMI.jpg" alt="glasses"></div>
 
-    <br><a href="https://youtu.be/RgLhPQAo1IM" target="_blank"><button id="btn-work">Check me out</button></a>
+    <br><a href="https://europa.eu/!xT84nC" target="_blank"><button id="btn-work">Check me out</button></a>
    </div>
    <div class="boxes" id="fun">
     <h2>My Photography</h2>
@@ -69,7 +69,9 @@
     <ul>
       <li><a href="https://www.instagram.com/siar_sohrab/" target="_blank"><i class="fab fa-instagram"></i></a></li>
       <li><a href="https://www.facebook.com/ahmadsiars" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+      <li><a href="https://www.youtube.com/watch?v=RgLhPQAo1IM&feature=youtu.be" target="_blank"><i class="fab fa-youtube"></i></a></li>
       <li><a href="https://github.com/Siar-Sohrab" target="_blank"><i class="fab fa-github-square"></i></a></li>
+      
     </ul>
   </div>
 </body>
