chenged the text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="picture-card"><img class="fun-pic" src="images/WITH ZALALLAH PIC.jpg" alt="work"></a> </div>
     <div class="picture-card"><img class="fun-pic" src="images/IN STUDIO WITH ARMI.jpg" alt="glasses"></div>
 
-    <br><a href="https://europa.eu/!xT84nC" target="_blank"><button id="btn-work">Check me out</button></a>
+    <br><a href="https://europa.eu/!xT84nC" target="_blank"><button id="btn-work">Check out my cv</button></a>
    </div>
    <div class="boxes" id="fun">
     <h2>My Photography</h2>
