--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <ul>
         <li>
             <figure>
-              <h2>Comment of colleagues</h2>
+              <h2>Comment of colleagues...</h2>
             <img src="images/user2.png" alt="User stestimonial picture">
             <blockquote> You are, without a doubt, the biggest professional asset to this company. We are lucky to have such an experienced person amongst us. We really appreciate the knowledge and tips that you choose to impart us with. Thank you!</blockquote>
             <figcaption>Production manager - Jane Doe</figcaption>
