--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
             <figure>
               <h2>Comment of colleagues...</h2>
             <img src="images/user2.png" alt="User stestimonial picture">
-            <blockquote> You are, without a doubt, the biggest professional asset to this company. We are lucky to have such an experienced person amongst us. We really appreciate the knowledge and tips that you choose to impart us with. Thank you!</blockquote>
+            <blockquote><p> You are, without a doubt, the biggest professional asset to this company.<br> We are lucky to have such an experienced person amongst us.<br> We really appreciate the knowledge and tips that you choose to impart us with.<br> Thank you!</p></blockquote>
             <figcaption>Production manager - Jane Doe</figcaption>
         </figure>
         </li>
         <li>
             <figure>
             <img src="images/user1.png" alt="User stestimonial picture">
-            <blockquote> I always count the lucky stars that I get to work with you. Your hard-working, patient, street smart and an overall wonderful colleague to have. May you have a lot of success in your professional life.</blockquote>
+            <blockquote><p> I always count the lucky stars that I get to work with you.<br> Your hard-working, patient, street smart and an overall wonderful colleague to have.<br> May you have a lot of success in your professional life.</p></blockquote>
             <figcaption>Colleague - Mariah Carey</figcaption>
         </figure>
         </li>
