--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
     <ul>
         <li>
             <figure>
-              <h2>Comment of colleagues...</h2>
+              <h2>Comment of colleagues</h2>
             <img src="images/user2.png" alt="User stestimonial picture">
-            <blockquote><p> You are, without a doubt, the biggest professional asset to this company.<br> We are lucky to have such an experienced person amongst us.<br> We really appreciate the knowledge and tips that you choose to impart us with.<br> Thank you!</p></blockquote>
+            <p> You are, without a doubt, the biggest professional asset to this company.<br> We are lucky to have such an experienced person amongst us.<br> We really appreciate the knowledge and tips that you choose to impart us with.<br> Thank you!</p>
             <figcaption>Production manager - Jane Doe</figcaption>
         </figure>
         </li>
         <li>
             <figure>
             <img src="images/user1.png" alt="User stestimonial picture">
-            <blockquote><p> I always count the lucky stars that I get to work with you.<br> Your hard-working, patient, street smart and an overall wonderful colleague to have.<br> May you have a lot of success in your professional life.</p></blockquote>
+            <p> I always count the lucky stars that I get to work with you.<br> Your hard-working, patient, street smart and an overall wonderful colleague to have.<br> May you have a lot of success in your professional life.</p>
             <figcaption>Colleague - Mariah Carey</figcaption>
         </figure>
         </li>
